--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "be-task-project",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,14 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "concurrently": "^7.6.0",
