--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "be-task-project",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "vitest": "^0.27.3"
